# mini-foot

./: Cargo.toml
.cargo/: config.toml
assets/: assets.blend  assets.blend1  grid_shader.wgsl
src/: components.rs  drop_ball_system.rs  main.rs  move_attached_ball_to_owner_system.rs  move_ball_system.rs  move_camera_system.rs  move_free_ball_system.rs  move_players_system.rs  setup.rs
