[package]
edition = "2021"
name = "mini-foot-game"
version = "0.1.0"

[dependencies]
#bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy = "0.14.0"
bevy-inspector-egui = "0.25.2"
bevy_debug_grid = "0.6.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
